--- a/other-games/index.html
+++ b/other-games/index.html
@@ -66,7 +66,19 @@ title: Zuurix.com - Other games
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/traincopter-genesis" target="_blank">▶ Download</a></li>
-</ul>	
+</ul>
+	
+<comments>
+<a>lost places : architect</a>
+</comments>
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/lpa%20website%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>An experimental building game.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/lost-places-architect" target="_blank">▶ Download</a></li>
+</ul>
 	
 <comments>
 <a>Battle for '17</a>
@@ -126,6 +138,18 @@ title: Zuurix.com - Other games
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/mortal-symbols" target="_blank">▶ Download</a></li>
+</ul>
+	
+<comments>
+<a>Kayosian name generator</a>
+</comments>
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Website%20banner.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>Stand-alone version of Light of the Locked World's random name generator.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/kayosian-name-generator" target="_blank">▶ Download</a></li>
 </ul>
 
 <comments>
