--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -13,18 +13,23 @@ title: Zuurix.com - Legion of Eternity
 </comments>
 
 <p>Legion of Eternity is a card game with deep customization, procedurally generated loot, and a story of cosmic horror.
-After apocalyptic cataclysm violates causality, a horde of mutants and machines is sent to wake the only thing that could save what remains.</p>
-	
-<i><p>We did a horrible mistake. An indescribable mistake. The Universe used to exist on the edge of an infinitely grander existence.</p>
+After humanity falls to a disaster of an unknown origin, a horde of mutants and machines is sent to wake the only thing that could save what remains.</p>
 
-<p>We have plunged it right into that abyss.</p>
+<i><p>We did a horrible mistake. Before it all, the Universe used to lie on the edge of an infinitely grander existence.</p>
+
+<p>It's a scape so alien that we couldn't comprehend that it was there, even though we lived for aeons right next to it.</p>
+
+<p>Now we know, of course, because now we're in it. We pushed our reality into that abyss.</p>
+
+<p>And the worst part is that we have began to adapt. Now we understand the things we shouldn't, we are no longer human.</p>
 
 <p>Our time is limited. I need to find a solution while I still can.</p>
 
-<p>I remember something about what I did.
-There is something that lurks beyond everything, beyond what we considered to be real.</p>	
+<p>I remember something about what I did. There is something that lurks here, a fractal mass.</p>
 
-<p>I have created you to activate the remnants of greatness. To do one last thing before we become infinite.</p>
+<p>I have created you to reach out to it. To activate the remnants of greatness.</p>
+
+<p>To do one last thing before we become infinite.</p>
 	
 <p>They have to know.</p></i>
 
