--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -17,9 +17,9 @@ After humanity falls to a disaster of an unknown origin, a horde of mutants and 
 
 <i><p>We did a horrible mistake. Before it all, the Universe used to lie on the edge of an infinitely grander existence.</p>
 
-<p>It's a scape so alien that we couldn't comprehend that it was there, even though we lived for aeons right next to it.</p>
+<p>It's a scape so alien that we couldn't comprehend it was there, even though we lived for aeons right next to it.</p>
 
-<p>Now we know, of course, because now we're in it. We pushed our reality into that abyss.</p>
+<p>Now we know, of course, because now we're in it. We have pushed our reality into that abyss.</p>
 
 <p>And the worst part is that we have began to adapt. Now we understand the things we shouldn't, we are no longer human.</p>
 
