--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -25,7 +25,7 @@ After humanity falls to a disaster of an unknown origin, a horde of mutants and 
 
 <p>Our time is limited. I need to find a solution while I still can.</p>
 
-<p>I remember something about what I did. There is something that lurks here, something massive.</p>
+<p>I remember something about what I did. There is something that lurks here, a massive presence.</p>
 
 <p>I have created you to reach out to it. To activate the remnants of greatness.</p>
 
