--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -12,20 +12,15 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<p><b>Light of the Locked World</b> is a role-playing game in which a portal malfunction takes you to the world of Kayos. Unable to return home, you have to start a new life and face challenges that will redefine you.</p>
+<p><b>Light of the Locked World</b> is a role-playing game in which a portal malfunction takes you to the world of Kayos. Unable to return home, you have to start a new life and face challenges that will redefine you.</b>
 
 <p><b>Planned features:</b></p>
 
-<p><b>Slowly unfolding story:</b> Survive a rough introduction to an unfamiliar world, try to find your place in it, and become entangled in the vast conspiracy.</p>
+<p><b>Persistence:</b> Your actions will make permanent changes to the world. Looted treasure chests never refill with goods, dead characters stay dead, resources are non-renewable.</b>
+<p><b>Colonial world:</b> Become a citizen of a world with a short history, coastal mining cities, developing democracy, magic-powered industry, lawless wastelands, demon-infested ruins, and uncertain, but promising future.</b>
+<p><b>Complex characters:</b> The game is populated by characters that belong to factions, can fight and help each other, pick up and equip items.</b>
+<p><b>Play together:</b> The game has a drop-in drop-out local multiplayer mode for two players that supports player-versus-player combat and does not require controllers.</b>
 
-<p><b>You are not special:</b> No prophecies, no strange powers. This extends to mechanics - player and non-player characters are almost identical.</p>
-
-<p><b>Open and atmospheric fantasy world:</b> Become a citizen of a world with a short history, coastal mining cities, developing democracy, magic-powered industry, lawless wastelands, infested ruins, and so much more.</p>
-
-<p><b>Persistence:</b> Your actions will make permanent changes to the world. Looted treasure chests never refill with goods, mortal characters die forever, resources are non-renewable.</p>
-
-<p><b>Play together:</b> The game has a drop-in drop-out local multiplayer mode for two players. Allows to cooperate or compete, does not require controllers.</p>
-	
 <comments>
 <a>Trailer</a>
 </comments>
