--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Light of the Locked World
 	
 <h1>Light of the Locked World</h1>
 	
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1fGLzDeCUiI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/1fGLzDeCUiI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
