--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -31,16 +31,16 @@ title: Zuurix.com - Light of the Locked World
 <a>Screenshots</a>
 </comments>
 	
-<a href="https://i.imgur.com/Ytol7Yy.png" target="_blank">
-<img src="https://i.imgur.com/Ytol7Yy.png" alt="" class="center"> 
+<a href="https://i.imgur.com/ntIVu27.png" target="_blank">
+<img src="https://i.imgur.com/ntIVu27.png" alt="" class="center"> 
 </a>
 	
-<a href="https://i.imgur.com/0CrwkCp.png" target="_blank">
-<img src="https://i.imgur.com/0CrwkCp.png" alt="" class="center"> 
+<a href="https://i.imgur.com/iIFSJrj.png" target="_blank">
+<img src="https://i.imgur.com/iIFSJrj.png" alt="" class="center"> 
 </a>
 
-<a href="https://i.imgur.com/Pow6C33.png" target="_blank">
-<img src="https://i.imgur.com/Pow6C33.png" alt="" class="center"> 
+<a href="https://i.imgur.com/hnzMTra.png" target="_blank">
+<img src="https://i.imgur.com/hnzMTra.png" alt="" class="center"> 
 </a>
 	
 </div><!-- /.blurb -->
