--- a/about/index.html
+++ b/about/index.html
@@ -5,11 +5,12 @@ title: Zuurix.com - About
 <div class="blurb">
 
 <h1>About</h1>
-	
-<p>Hello!</p>
+
+<img src="https://i.imgur.com/HkVAOp9.jpg" title=""/>
+
 <p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
 	
-<p>I love developing games with procedural generation, character customization, and world-building - looters, role-playing games, card games.
+<p>I love developing games with procedural generation, character customization, and world-building - looters, role-playing games, card games.</p>
 	
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
