--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - About
 
 <p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
 	
-<p>I love developing games with procedural generation, character customization, and world-building - looters, role-playing games, card games.</p>
+<p>I enjoy making games with role-playing game elements: Leveling and item systems, character customization.</p>
 	
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
@@ -19,7 +19,7 @@ title: Zuurix.com - About
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
 
-<p>Right now I am working on Light of the Locked World - a role-playing game.</p>
+<p>Right now I am working on Light of the Locked World - a fantasy role-playing game about a colonial world of Kayos.</p>
 
 <comments>
 <a>Contact me</a>
