--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,8 @@ title: Zuurix.com - About
 <div class="blurb">
 
 <h1>About</h1>
-
-<img src="https://i.imgur.com/HkVAOp9.jpg" title=""/>
+	
+<img src="https://i.imgur.com/HkVAOp9.jpg" style="height: 256px; width: 256px; float: left;>
 
 <p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
 	
