--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - About
 
 <h1>About</h1>
 
-<img src="https://i.imgur.com/HkVAOp9.jpg" style="height: 256px; width: auto; float: left; margin: 20px 20px 20px 0;">
+<img src="https://i.imgur.com/HkVAOp9.jpg" style="height: 256px; width: auto; margin: 20px 20px 20px 0;">
 
 <p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
 	
