--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Games
 	<a>Light of the Locked World</a>
 	</comments>
 	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; margin: 20px 20px 20px 0;">
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 	<p>Light of the Locked World is a persistent open world RPG.</p>	
 	
