--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -9,28 +9,15 @@ title: Zuurix.com - Sector Six
 <comments>
 <a>About the game</a>
 </comments>
-	
-	<p>Sector Six is a side-scrolling, sci-fi shooter with silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
-	
-	<p><b>Save the Universe</b></p>
 
-	<p>Enter distant future and join the desperate fight to stop the Eight Machines from destroying everything. In your journey, you will interact with ancient structures and beings, break laws of physics, travel between Sectors, battle swarms of the Machine minions, collectors, despair, anomalies, defense systems - all to stop the terrible enemy.</p>
+<p><b>Sector Six</b> is a side-scrolling, sci-fi shooter with a silhouette aesthetic, procedural loot, extensive customization, and story missions.</p>
 
-	<p><b>Build your spaceship</b></p>
+<p><b>Features:</b></p>
 
-	<p>Spaceship building allows you to build a unique ship from procedural parts, obtained by destroying minions of the Machines. Every part has various properties and can be placed anywhere on the building field, allowing you to customize performance, appearance, and size of your ship.</p>
-
-	<p><b>Become master of spaceship combat</b></p>
-
-	<p>Test not just your spaceship, but also your skills as you dodge enemy projectiles and find the right timing to counterattack with your own. Each enemy brings new attacks, defenses, and strategies to defeat - it’s up to you to hone your combat skills and take them down.</p>
-
-	<p><b>Part customization, part sets, and relics</b></p>
-
-	<p>Combine, upgrade, and re-roll parts to create ones that are ideal for your dream spaceship. If that is not enough, collect set parts and relics to transform your destroyer of invaders into something even more powerful!</p>
-
-	<p><b>Modular difficulty system</b></p>
-
-	<p>Make the game as hard as you want it to be! Modular difficulty system allows you to modify almost every element of the combat and offers rewards for increasing the difficulty.</p>
+<p><b>Save the Universe:</b> Enter the distant future and join a desperate fight to stop the Eight Machines from destroying everything.</p>
+<p><b>Build your spaceship:</b> Customize the performance, appearance, and size of your spaceship, make it unstoppable by installing relics and activating set effects.</p>
+<p><b>Modular difficulty system:</b> Make the game as difficult as you want it to be. Higher difficulty means better rewards!</p>
+<p><b>Master the ship combat:</b> Learn enemy attack patterns to counter them, find the ability combinations that fit your playstyle, and obliterate everything that stands in your way with lasers and missiles.</p>
 	
 	<comments>
 	<a>Links</a>
