--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Light of the Locked World is a persistent open world RPG.</p>	
+	<p>Light of the Locked World is a persistent fantasy role-playing game about a colonial world of Kayos.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
@@ -28,7 +28,7 @@ title: Zuurix.com - Games
 	
     	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/944x944.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-	<p>Sector Six is a side-scrolling sci-fi shooter with silhouette aesthetic, procedural loot, and extensive customization.</p>	
+	<p>Sector Six is a side-scrolling sci-fi shooter with a silhouette aesthetic, procedural loot, and extensive customization.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">▶ Get from Steam</a></li>
@@ -56,7 +56,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Legion of Eternity is a singleplayer-focused story-driven card game that merges science fiction and cosmic horror.</p>	
+	<p>Legion of Eternity is a card game with deep customization, procedurally generated loot, and a story of cosmic horror.</p>	
 	
 	<ul style="margin-bottom: 178px; list-style-type: none;">
 	<li><a href="https://zuurix.com/legion-of-eternity/">▶ About the game</a></li>
