--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -12,14 +12,23 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<p><b>Light of the Locked World</b> is a role-playing game in which a portal malfunction takes you to the world of Kayos. Unable to return home, you have to start a new life and face challenges that will redefine you.</p>
+<b>Light of the Locked World</b> is a fantasy role-playing game.
 
-<p><b>Planned features:</b></p>
+Enter a developing world of Kayos, try to find a place in it, and become entangled in a fight against an existential threat.
 
-<p><b>Persistence:</b> Your actions will make permanent changes to the world. Looted treasure chests never refill with goods, dead characters stay dead, resources are non-renewable.</p>
-<p><b>Colonial world:</b> Become a citizen of a world with a short history, coastal mining cities, developing democracy, magic-powered industry, lawless wastelands, demon-infested ruins, and uncertain, but promising future.</p>
-<p><b>Complex characters:</b> The game is populated by characters that belong to factions, can fight and help each other, pick up and equip items.</p>
-<p><b>Play together:</b> The game has a drop-in drop-out local multiplayer mode for two players that supports player-versus-player combat and does not require controllers.</p>
+<b>Planned features:</b>
+
+<b>Open and atmospheric world:</b> Freely roam in a world with lively settlements, vast meadows, desolate deserts, and treacherous ruins.
+
+<b>Capable characters:</b> Interact with the world's inhabitants that can help and fight each other, gain experience, take and equip items, belong to factions.
+
+<b>Persistence:</b> Characters and environment are persistent, the results of your actions are preserved indefinitely.
+
+<b>Intense combat:</b> Unleash devastating attacks, negate enemy moves, cast spells, and conquer the savage lands with the game's gripping real-time combat system.
+
+<b>Become powerful:</b> Equip your character with weapons and armor, master combat and crafting by leveling classes, manage faction reputation.
+
+<b>Play together:</b> The game has local multiplayer support for two players - cooperate to overcome challenges or compete for territory and resources.
 
 <comments>
 <a>Trailer</a>
