--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -12,23 +12,23 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<b>Light of the Locked World</b> is a fantasy role-playing game.
+<p><b>Light of the Locked World</b> is a fantasy role-playing game.</p>
 
-Enter a developing world of Kayos, try to find a place in it, and become entangled in a fight against an existential threat.
+<p>Enter a developing world of Kayos, try to find a place in it, and become entangled in a fight against an existential threat.</p>
 
-<b>Planned features:</b>
+<p><b>Planned features:</b>
 
-<b>Open and atmospheric world:</b> Freely roam in a world with lively settlements, vast meadows, desolate deserts, and treacherous ruins.
+<p><b>Open and atmospheric world:</b> Freely roam in a world with lively settlements, vast meadows, desolate deserts, and treacherous ruins.</p>
 
-<b>Capable characters:</b> Interact with the world's inhabitants that can help and fight each other, gain experience, take and equip items, belong to factions.
+<p><b>Capable characters:</b> Interact with the world's inhabitants that can help and fight each other, gain experience, take and equip items, belong to factions.</p>
 
-<b>Persistence:</b> Characters and environment are persistent, the results of your actions are preserved indefinitely.
+<p><b>Persistence:</b> Characters and environment are persistent, the results of your actions are preserved indefinitely.</p>
 
-<b>Intense combat:</b> Unleash devastating attacks, negate enemy moves, cast spells, and conquer the savage lands with the game's gripping real-time combat system.
+<p><b>Intense combat:</b> Unleash devastating attacks, negate enemy moves, cast spells, and conquer the savage lands with the game's gripping real-time combat system.</p>
 
-<b>Become powerful:</b> Equip your character with weapons and armor, master combat and crafting by leveling classes, manage faction reputation.
+<p><b>Become powerful:</b> Equip your character with weapons and armor, master combat and crafting by leveling classes, manage faction reputation.</p>
 
-<b>Play together:</b> The game has local multiplayer support for two players - cooperate to overcome challenges or compete for territory and resources.
+<p><b>Play together:</b> The game has local multiplayer support for two players - cooperate to overcome challenges or compete for territory and resources.</p>
 
 <comments>
 <a>Trailer</a>
