--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Light of the Locked World is a persistent fantasy role-playing game about a colonial world of Kayos.</p>	
+	<p>Light of the Locked World is a fantasy role-playing game about a developing world of Kayos.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
