--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Light of the Locked World
 <a>About the game</a>
 </comments>
 
-p><b>Light of the Locked World</b> is a fantasy role-playing game.</p>
+<b>Light of the Locked World</b> is a fantasy role-playing game.</p>
 
 <p>Enter a developing world of Kayos, try to find a place in it, and become entangled in a fight against an existential threat.</p>
 
