--- a/other-games/index.html
+++ b/other-games/index.html
@@ -33,6 +33,18 @@ title: Zuurix.com - Other games
 </ul>
 	
 <comments>
+<a>Thirty Cycles</a>
+</comments>
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/site%20banner.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>A turn-based RPG inspired by Nemesis system. Made for Nemesis Jam.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/thirty-cycles" target="_blank">▶ Download</a></li>
+</ul>
+	
+<comments>
 <a>The Name of the Demon</a>
 </comments>
 	
