--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -24,9 +24,9 @@ title: Zuurix.com - Light of the Locked World
 
 <p><b>Persistence:</b> Characters and environment are persistent, the results of your actions are preserved indefinitely.</p>
 
-<p><b>Intense combat:</b> Unleash devastating attacks, negate enemy moves, cast spells, and conquer the savage lands with the game's gripping real-time combat system.</p>
+<p><b>Intense combat:</b> Conquer the lawless lands with the game's real-time combat system - wield magic and medieval weapons, perform and dodge punishing attacks.</p>
 
-<p><b>Become powerful:</b> Equip your character with weapons and armor, master combat and crafting by leveling classes, manage faction reputation.</p>
+<p><b>Become powerful:</b> Equip your character with weapons and armor, master combat and crafting by leveling classes, earn faction respect, learn spells.</p>
 
 <p><b>Play together:</b> The game has local multiplayer support for two players - cooperate to overcome challenges or compete for territory and resources.</p>
 	
