--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -24,7 +24,7 @@ title: Zuurix.com - Light of the Locked World press kit
 
 <p><b>Persistence:</b> Characters and environment are persistent, the results of your actions are preserved indefinitely.</p>
 
-<p><b>Intense combat:</b> Conquer the lawless lands with the game's real-time combat system - wield magic and medieval weapons, perform and dodge punishing attacks.</p>
+<p><b>Intense combat:</b> Conquer the lawless lands with the game's real-time combat system - wield magic and medieval weapons, perform and dodge deadly attacks.</p>
 
 <p><b>Become powerful:</b> Equip your character with weapons and armor, master combat and crafting by leveling classes, earn faction respect, learn spells.</p>
 
