--- a/about/index.html
+++ b/about/index.html
@@ -19,9 +19,9 @@ title: Zuurix.com - About
 <p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
 <p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
 	
-<p>In July 2021 I have created Small Moons game studio for myself, and since then I am operating under that name.</p>
+<p>In July 2021 I have created Small Moons game studio for myself, and since then I am mostly operating under that name.</p>
 
-<p>Right now I am working on Light of the Locked World - a fantasy role-playing game about a developing world of Kayos.</p>
+<p>Right now I am working on Light of the Locked World: A fantasy role-playing game about a developing world of Kayos.</p>
 
 <comments>
 <a>Contact me</a>
