--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Magic of Autumn
 <a>About the game</a>
 </comments>
 
-<p>Magic of Autumn is a singleplayer card game with an overworld - and everything in the overworld can be turned into cards. </p>
+<p>An adventure card game! Explore a magical island, turn the environment into cards, build decks to overcome card battles, and get your soul back.</p>
 	
 <p><b>Story</b></p>
 	
@@ -21,8 +21,7 @@ Your soul was stolen. You must get it back.</p>
 	
 <p><b>Conjuring</b></p>
 
-<p>The only power that the soulless ones can wield.
-Every object in the game's world can be conjured into cards - idols and wishes that become your guardians and weapons during fights in the Void Plane.</p>
+<p>The only power that the soulless ones can wield. Everything in the environment can be conjured into cards that become your guardians and weapons during fights in the Void Plane.</p>
 	
 <p><b>Combat</b></p>
 
@@ -33,7 +32,7 @@ It's easy to learn for those who are not familiar with the genre and has rule tw
 <p><b>Exploration</b></p>
 	
 <p>Explore a remote Golden Apple Island, a place haunted by the seasonal spirits and protected by runes.
-You come here in autumn, hoping that the defenses would be weakened during the season of decay.
+You arrive here in autumn, hoping that the defenses would be weakened during the season of decay.
 Win fights to break runes and gain access to the new areas of the Island that are full of things to find.</p>
 	
 <comments>
