--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Magic of Autumn press kit
 <a>Full game description</a>
 </comments>
 
-<p>An adventure card game! Explore a magical island, turn the environment into cards, build decks to overcome card battles, and get your soul back.</p>
+<p>A card adventure game. Explore a magical island, turn the environment into cards, build decks to overcome card battles, and get your soul back.</p>
 	
 <p><b>Story</b></p>
 	
