--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@ title: Zuurix.com - Games
 	<h1>Games</h1>
 	
 	<p>Play games by Zuurix!</p>
+		
+	<comments>
+	<a>Light of the Locked World</a>
+	</comments>
+	
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Site%20square%20353x353.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+	<p>Magic of Spring is a card adventure game with a conjuring mechanic: Turn everything in the environment into cards.</p>	
+	
+	<ul style="margin-bottom: 201px; list-style-type: none;">
+	<li><a href="https://store.steampowered.com/app/1786910/Magic_of_Spring/" target="_blank">▶ View on Steam</a></li>
+	</ul>
 	
 	<comments>
 	<a>Light of the Locked World</a>
@@ -42,7 +54,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/magic_of_autumn/images/Square%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Magic of Autumn is a card game with an overworld - and everything in the overworld can be turned into a card.</p>	
+	<p>Magic of Autumn is a card adventure game with a conjuring mechanic: Turn everything in the environment into cards.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1184450/Magic_of_Autumn/" target="_blank">▶ Get from Steam</a></li>
