--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Zuurix.com - Games
 	<p>Play games by Zuurix!</p>
 		
 	<comments>
-	<a>Light of the Locked World</a>
+	<a>Magic of Spring</a>
 	</comments>
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Site%20square%20353x353.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
