--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ title: Zuurix.com - About
 	
 <p>In July 2021 I have created Small Moons game studio for myself, and since then I am mostly operating under that name.</p>
 
-<p>Right now I am working on Light of the Locked World: A fantasy role-playing game about a developing world of Kayos.</p>
+<p>Right now I am working on Magic of Spring, a card adventure game.</p>
 
 <comments>
 <a>Contact me</a>
