--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,11 @@ title: Zuurix.com - About
 
 <h1>About</h1>
 
-<img src="https://i.imgur.com/jyVtxeZ.jpg" style="height: 256px; width: auto; float: left; margin: 20px 20px 20px 0;">
+<img src="https://i.imgur.com/y8nLkxY.jpg" style="height: 256px; width: auto; float: left; margin: 20px 20px 20px 0;">
 
-<p>I am Aivaras Klimas a.k.a. Zuurix, an indie game developer from Lithuania.</p>
+<p>I am Zuurix, an indie game developer from Lithuania.</p>
 	
-<p>I enjoy making games with role-playing game elements: Leveling and item systems, character customization.</p>
+<p>I enjoy making all sorts of games, but currently I'm narrowing focus to role-playing, shooter, and card games.</p>
 	
 <p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
 
@@ -21,8 +21,8 @@ title: Zuurix.com - About
 	
 <p>In July 2021 I have created Small Moons game studio for myself, and since then I am mostly operating under that name.</p>
 
-<p>Right now I am working on Magic of Spring, a card adventure game.</p>
-
+<p>Right now I am working on Magic of Spring, a card adventure game, there big releases coming from me in 2022 and 2023!</p>
+	
 <comments>
 <a>Contact me</a>
 </comments>
