--- a/about/index.html
+++ b/about/index.html
@@ -27,6 +27,6 @@ title: Zuurix.com - About
 <a>Contact me</a>
 </comments>
 	
-<p>Email: <i>zuurixgames@gmail.com</i></p>
+<p>Email: <i>smallmoonsgames@gmail.com</i></p>
 
 </div><!-- /.blurb -->
