--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Site%20square%20353x353.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Magic of Spring is a card adventure game with a conjuring mechanic: Turn everything in the environment into cards.</p>	
+	<p>Aeon's new adventure! Magic of Spring is a card adventure game with a conjuring mechanic.</p>	
 	
 	<ul style="margin-bottom: 201px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/1786910/Magic_of_Spring/" target="_blank">▶ View on Steam</a></li>
