--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@ title: Zuurix.com - Games
 	<li><a href="https://zuurix.com/magic-of-autumn/">▶ About the game</a></li>
 	<li><a href="https://zuurix.com/magic-of-autumn-presskit/">▶ View press kit</a></li>
 	</ul>
+		
+	<comments>
+	<a>Beyond the Gate</a>
+	</comments>
+	
+	<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/BTG%20353x353.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+	<p>Loot two billion worlds beyond the Gate in this unique RPG.</p>	
+	
+	<ul style="margin-bottom: 201px; list-style-type: none;">
+	<li><a href="https://store.steampowered.com/app/2152950/Beyond_the_Gate/" target="_blank">▶ View on Steam</a></li>
+	</ul>
 	
 	<comments>
 	<a>Legion of Eternity</a>
