--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ title: Zuurix.com - Games
 	
 	<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/BTG%20353x353.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
-	<p>Loot two billion worlds beyond the Gate in this unique RPG.</p>	
+	<p>Beyond the Gate is a small experimental looter RPG infused with ideas from Torchlight and No Man's Sky.</p>	
 	
 	<ul style="margin-bottom: 201px; list-style-type: none;">
 	<li><a href="https://store.steampowered.com/app/2152950/Beyond_the_Gate/" target="_blank">▶ View on Steam</a></li>
