--- a/community/index.html
+++ b/community/index.html
@@ -6,21 +6,8 @@ title: Zuurix.com - Community
 
 <p>Follow, like, share, join, contribute, discuss!</p>
 
-<comments>
-<a>Join my Discord server</a>
-</comments>
-
-<p><a href="https://discord.gg/XkE3yAz">▶ Click here to join my Discord server</a></p>
-
-<comments>
-<a>Links</a>
-</comments>
-
+<p><a href="https://discord.gg/XkE3yAz">▶ Discord server</a></p>
 <p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ My Twitter account</a></p>
 <p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ My YouTube channel</a></p>
-
-<comments>
-<a>Comments</a>
-</comments>
 
 {% include disqus.html %}
