--- a/community/index.html
+++ b/community/index.html
@@ -6,8 +6,8 @@ title: Zuurix.com - Community
 
 <p>Follow, like, share, join, contribute, discuss!</p>
 
-<p><a href="https://discord.gg/XkE3yAz">▶ Discord server</a></p>
-<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ My Twitter account</a></p>
-<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ My YouTube channel</a></p>
+<comments>Links</comments>
 
-{% include disqus.html %}
+<p><a href="https://discord.gg/XkE3yAz">▶ Discord</a></p>
+<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Twitter</a></p>
+<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ YouTube</a></p>
