--- a/community/index.html
+++ b/community/index.html
@@ -6,7 +6,9 @@ title: Zuurix.com - Community
 
 <p>Follow, like, share, join, contribute, discuss!</p>
 
-<comments>Links</comments>
+<comments>
+<a>Links</a>
+</comments>
 
 <p><a href="https://discord.gg/XkE3yAz">▶ Discord</a></p>
 <p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Twitter</a></p>
