--- a/community/index.html
+++ b/community/index.html
@@ -11,5 +11,6 @@ title: Zuurix.com - Community
 </comments>
 
 <p><a href="https://discord.gg/XkE3yAz">▶ Discord</a></p>
+<p><a href="https://www.tumblr.com/smallmoonsgames" target="_blank">▶ Tumblr</a></p>
 <p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Twitter</a></p>
-<p><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">▶ YouTube</a></p>
+<p><a href="https://www.youtube.com/@SmallMoonsGames" target="_blank">▶ YouTube</a></p>
