--- a/other-games/index.html
+++ b/other-games/index.html
@@ -9,6 +9,18 @@ title: Zuurix.com - Other games
 <p>Old games, side projects, and games made for competitions</p>
 	
 <comments>
+<a>Beyond the Gate</a>
+</comments>
+	
+<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/BTG%20450x450.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>Experimental lite ARPG with procedurally generated worlds.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/beyond-the-gate" target="_blank">▶ Download</a></li>
+</ul>
+	
+<comments>
 <a>The Cursed Legion</a>
 </comments>
 	
