--- a/index.html
+++ b/index.html
@@ -3,89 +3,11 @@ layout: default
 title: Zuurix.com - Games
 ---
 
-	<div class="blurb">
-	<h1>Games</h1>
+<div class="blurb">
+<h1>Games</h1>
 	
-	<p>Play games by Zuurix!</p>
-		
-	<comments>
-	<a>Magic of Spring</a>
-	</comments>
+<ul style="list-style-type: none;">
+<li><a href="https://v3663l.com" target="_blank">▶ Go to new website to continue</a></li>
+</ul>
 	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Site%20square%20353x353.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-	
-	<p>Aeon's new adventure! Magic of Spring is a card adventure game with a conjuring mechanic.</p>	
-	
-	<ul style="margin-bottom: 201px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/app/1786910/Magic_of_Spring/" target="_blank">▶ View on Steam</a></li>
-	</ul>
-	
-	<comments>
-	<a>Light of the Locked World</a>
-	</comments>
-	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/LOTLW/LOTLW%20Small%20Logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-	
-	<p>Light of the Locked World is a fantasy role-playing game about a developing world of Kayos.</p>	
-	
-	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
-	<li><a href="https://zuurix.com/light-of-the-locked-world/">▶ About the game</a></li>
-	<li><a href="https://zuurix.com/light-of-the-locked-world-presskit/">▶ View press kit</a></li>
-	</ul>
-	
-	<comments>
-	<a>Sector Six</a>
-	</comments>	
-	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/944x944.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-    	
-	<p>Sector Six is a side-scrolling sci-fi shooter with a silhouette aesthetic, procedural loot, and extensive customization.</p>	
-	
-	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">▶ Get from Steam</a></li>
-	<li><a href="https://zuurix.com/sector-six/">▶ About the game</a></li>
-	<li><a href="https://zuurix.com/sector-six-presskit/">▶ View press kit</a></li>
-	</ul>
-	
-	<comments>
-	<a>Magic of Autumn</a>
-	</comments>
-	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/magic_of_autumn/images/Square%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-	
-	<p>Magic of Autumn is a card adventure game with a conjuring mechanic: Turn everything in the environment into cards.</p>	
-	
-	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/app/1184450/Magic_of_Autumn/" target="_blank">▶ Get from Steam</a></li>
-	<li><a href="https://zuurix.com/magic-of-autumn/">▶ About the game</a></li>
-	<li><a href="https://zuurix.com/magic-of-autumn-presskit/">▶ View press kit</a></li>
-	</ul>
-		
-	<comments>
-	<a>Legion of Eternity</a>
-	</comments>
-	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/LOE%20Logo%20Square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-	
-	<p>Legion of Eternity is a card game with deep customization, procedurally generated loot, and a story of cosmic horror.</p>	
-	
-	<ul style="margin-bottom: 178px; list-style-type: none;">
-	<li><a href="https://zuurix.com/legion-of-eternity/">▶ About the game</a></li>
-	<li><a href="https://zuurix.com/legion-of-eternity-presskit/">▶ View press kit</a></li>
-	</ul>
-	
-	<comments>
-	<a>Other games</a>
-	</comments>
-	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-	
-	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
-	
-	<ul style="margin-bottom: 201px; list-style-type: none;">
-	<li><a href="https://zuurix.com/other-games/">▶ Go to archive</a></li>
-	</ul>
-	
-	</div><!-- /.blurb -->
-
+</div><!-- /.blurb -->
