--- a/about/index.html
+++ b/about/index.html
@@ -6,27 +6,8 @@ title: Zuurix.com - About
 
 <h1>About</h1>
 
-<img src="https://i.imgur.com/y8nLkxY.jpg" style="height: 256px; width: auto; float: left; margin: 20px 20px 20px 0;">
-
-<p>I am Zuurix, an indie game developer from Lithuania.</p>
+<ul style="list-style-type: none;">
+<li><a href="https://v3663l.com" target="_blank">▶ Go to new website to continue</a></li>
+</ul>
 	
-<p>I enjoy making all sorts of games, but currently I'm narrowing focus to role-playing, shooter, and card games.</p>
-	
-<p>In September 2013 I have completed several online JavaScript lessons, downloaded GameMaker engine and month later I had my first real game done.</p>
-
-<p>After that I've been making games nonstop.</p>
-	
-<p>My first serious commercial game – Sector Six – was released on May 2016 as a Steam Early Access title.</p>
-<p>In September 2018 it has left Early Access and currently, Sector Six is my most successful game.</p>
-	
-<p>In July 2021 I have created Small Moons game studio for myself, and since then I am mostly operating under that name.</p>
-
-<p>Right now I am working on Magic of Spring, a card adventure game. There are big releases in the plans for 2023 and 2024!</p>
-	
-<comments>
-<a>Contact me</a>
-</comments>
-	
-<p>Email: <i>smallmoonsgames@gmail.com</i></p>
-
 </div><!-- /.blurb -->
