--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: Zuurix.com - About
 <h1>About</h1>
 
 <ul style="list-style-type: none;">
-<li><a href="https://v3663l.com" target="_blank">▶ Go to new website to continue</a></li>
+<li><a href="https://v3663l.com" target="_blank">▶ Go to the new website to continue</a></li>
 </ul>
 	
 </div><!-- /.blurb -->
