--- a/community/index.html
+++ b/community/index.html
@@ -4,13 +4,8 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
-<p>Follow, like, share, join, contribute, discuss!</p>
-
-<comments>
-<a>Links</a>
-</comments>
-
-<p><a href="https://discord.gg/XkE3yAz">▶ Discord</a></p>
-<p><a href="https://www.tumblr.com/smallmoonsgames" target="_blank">▶ Tumblr</a></p>
-<p><a href="https://twitter.com/DeveloperZuurix" target="_blank">▶ Twitter</a></p>
-<p><a href="https://www.youtube.com/@SmallMoonsGames" target="_blank">▶ YouTube</a></p>
+<ul style="list-style-type: none;">
+<li><a href="https://v3663l.com" target="_blank">▶ Go to the new website to continue</a></li>
+</ul>
+	
+</div><!-- /.blurb -->
